| Summary: | ASTERISK-25582: Testsuite: Reactor timeout error in tests/fax/pjsip/directmedia_reinvite_t38 | ||||
| Reporter: | Matt Jordan (mjordan) | Labels: | |||
| Date Opened: | 2015-11-20 21:27:05.000-0600 | Date Closed: | 2016-02-29 18:32:09.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_pjsip_t38 Tests/testsuite | ||
| Versions: | 13.6.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Now that tests involving sipp scenarios fail on reactor timeout the tests/fax/pjsip/directmedia_reinvite_t38 is failing.
{noformat} [Oct 09 02:57:39] WARNING[30882]: test_case:452 _reactor_timeout: Reactor timeout: '30' seconds [Oct 09 02:57:39] WARNING[30882]: sipp:454 kill: Killing SIPp Scenario endpoint_A.xml [Oct 09 02:57:39] WARNING[30882]: sipp:454 kill: Killing SIPp Scenario endpoint_B.xml [Oct 09 02:57:49] WARNING[30882]: asterisk:440 __send_kill: Sending KILL to Asterisk 127.0.0.1 [Oct 09 02:57:49] ERROR[30882]: test_case:567 evaluate_results: Fail token present: Reactor timed out. Test Failed. {noformat} Investigate if the test is actually failing or if the test was relying on the timeout to end the test. Either way fix the test to no longer fail. | ||||
| Comments: | By: Joshua C. Colp (jcolp) 2016-01-25 09:52:53.764-0600 Still failing, it's a hard problem. | ||||